# OpenWebSDR

./: .gitignore  .prettierignore  README.md  eslint.config.mjs  package.json  tsconfig.base.json  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: ci.yml
apps/control-api/: package.json
apps/control-api/src/: index.ts
apps/receiver-registry/: package.json
apps/receiver-registry/src/: index.ts  logger.ts  registry.ts  routes.ts
apps/scheduler/: package.json  vitest.config.ts
apps/scheduler/src/: channel-store.ts  index.ts  policy.ts  routes.ts  scheduler.ts  session-store.ts
apps/session-gateway/: package.json
apps/session-gateway/src/: connection-manager.ts  index.ts
apps/test-harness/: package.json  vitest.integration.config.ts
apps/test-harness/src/: harness.ts  index.ts  wait.ts
apps/web-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-ui/src/: App.module.css  App.tsx
apps/web-ui/src/api/: client.ts
apps/web-ui/src/components/: Panel.module.css  ReceiverPanel.tsx  StatusBar.module.css  StatusBar.tsx  TunePanel.module.css  TunePanel.tsx  WaterfallPanel.module.css  WaterfallPanel.tsx
apps/web-ui/src/hooks/: useControlSocket.ts  useSystemHealth.ts
apps/window-engine/: package.json
apps/window-engine/src/: index.ts  window-manager.ts
docker/compose/: docker-compose.emulator.yml  docker-compose.rtlsdr.yml  docker-compose.yml
docker/config/: nginx.conf  nginx.fly.conf
docker/images/: Dockerfile.channel-service  Dockerfile.node-base  Dockerfile.node-service  Dockerfile.receiver-emulator  Dockerfile.receiver-registry  Dockerfile.scheduler  Dockerfile.waterfall-service  Dockerfile.web-ui  Dockerfile.web-ui.fly
fly/: README.md  channel-service.toml  control-api.toml  deploy.sh  receiver-emulator.toml  receiver-registry.toml  scheduler.toml  session-gateway.toml  waterfall-service.toml  web-ui.toml  window-engine.toml
native/channel-service/: CMakeLists.txt
native/channel-service/include/: channel_worker.h
native/channel-service/src/: channel_worker.cpp  main.cpp
native/dsp-core/: CMakeLists.txt
native/dsp-core/include/: dsp_core.h
native/dsp-core/src/: dsp_core.cpp
native/dsp-core/tests/: demod_test.cpp  fft_test.cpp  fir_test.cpp
native/receiver-emulator/: CMakeLists.txt
native/receiver-emulator/include/: emulator.h  http_server.h  registry_client.h
native/receiver-emulator/src/: emulator.cpp  http_server.cpp  main.cpp  registry_client.cpp
native/receiver-emulator/tests/: emulator_test.cpp  fault_injection_test.cpp
native/receiver-rtlsdr/: CMakeLists.txt
native/receiver-rtlsdr/include/: rtlsdr_receiver.h
native/receiver-rtlsdr/src/: rtlsdr_receiver.cpp
native/waterfall-service/: CMakeLists.txt
native/waterfall-service/include/: waterfall_generator.h
native/waterfall-service/src/: main.cpp  waterfall_generator.cpp
tests/e2e/: playwright.config.ts  ui-smoke.test.ts
tests/integration/: contract-receiver.test.ts  receiver-registration.test.ts  stack-boot.test.ts  tune-and-session.test.ts
tests/performance/: channel-scaling.test.ts
tests/soak/: long-run.test.ts
tests/unit/receiver-registry/: registry.test.ts
tests/unit/scheduler/: channel-store.test.ts  policy.test.ts
